--- a/daily_report/2025-07-18.md
+++ b/daily_report/2025-07-18.md
@@ -1,29 +1,30 @@
-# Research Paper Report  
+# Research Paper Report
 
-## Table of Contents  
-- [Introduction](#introduction)  
-- [AI Agents](#ai-agents)  
-- [Foundation Models](#foundation-models)  
+## Table of Contents
+- [Introduction](#introduction)
+- [Foundation Models](#foundation-models)
+- [AI Tools](#ai-tools)
+- [Reviews](#reviews)
 
-## Introduction  
-This report organizes research papers into categories for better readability and reference. Each section contains a table listing key details such as DOI, title, domain, journal, publication date, authors, and affiliations.  
+## Introduction
+This report categorizes and summarizes recent research papers across three main categories: Foundation Models, AI Tools, and Reviews. Each section provides a structured overview of papers in that category, including key details such as DOI, title, domain, journal, and publication date.
 
-## AI Agents  
+## Foundation Models
 
-| DOI | Title | Domain | Journal | Publication Date | Authors | Affiliations |  
-|-----|-------|--------|---------|------------------|---------|--------------|  
-| - | - | - | - | - | - | - |  
+| DOI | Title | Domain | Journal | Publication Date | Authors | Affiliations |
+|-----|-------|--------|---------|------------------|---------|--------------|
+| [10.1177/09636625251351575](https://www.semanticscholar.org/paper/b016d24707d23443fd3f2916dc33808f1b2963a0) | When AI sees hotter: Overestimation bias in large language model climate assessments. | Climate Science | Public understanding of science | 2025-07-13 | Ruilin Zheng | - |
+| [10.1038/s41746-025-01807-8](https://www.semanticscholar.org/paper/8452c2f5cee9adc02b715fada8284367fdab100b) | Vision-language model for report generation and outcome prediction in CT pulmonary angiogram | Medical Imaging | NPJ Digital Medicine | 2025-07-12 | Harrison X. Bai | - |
 
-*(No papers currently listed in this category.)*  
+## AI Tools
 
-## Foundation Models  
+| DOI | Title | Domain | Journal | Publication Date | Authors | Affiliations |
+|-----|-------|--------|---------|------------------|---------|--------------|
+| [10.1101/2025.07.11.25331400](https://www.semanticscholar.org/paper/4fa0afa0548eb8a9a1fe02d8059888e6ebfc34b3) | Design and Implementation of an End-to-End AI-Driven Colonoscopy Recall Workflow at Scale | Medical Technology | - | 2025-07-14 | Venkat Jegadeesan | - |
+| [10.1093/bioinformatics/btaf402](https://www.semanticscholar.org/paper/18ecebe0b0fe0d241cd60933b9855e9f8cf656c7) | SCassist: An AI Based Workflow Assistant for Single-Cell Analysis. | Bioinformatics | Bioinformatics | 2025-07-12 | Rachel R. Caspi | - |
 
-| DOI | Title | Domain | Journal | Publication Date | Authors | Affiliations |  
-|-----|-------|--------|---------|------------------|---------|--------------|  
-| - | - | - | - | - | - | - |  
+## Reviews
 
-*(No papers currently listed in this category.)*  
-
----
-
-*Note: The tables are currently empty as no input data was provided. Please provide paper details to generate a complete report.*
+| DOI | Title | Domain | Journal | Publication Date | Authors | Affiliations |
+|-----|-------|--------|---------|------------------|---------|--------------|
+| [10.1007/s00405-025-09561-z](https://www.semanticscholar.org/paper/a98606ae4d464bcb469a61cc1ba433f280f4e1f4) | Bibliometric analysis in sulcus vocalis research: 44 years of perspective. | Medical Research | European archives of oto-rhino-laryngology : official journal of the European Federation of Oto-Rhino-Laryngological Societies (EUFOS) : affiliated with the German Society for Oto-Rhino-Laryngology - Head and Neck Surgery | 2025-07-12 | N. Murat | - |
